[package]
name = "ainav"
version = "0.1.0"
authors = ["Michael Sloan <mgsloan@gmail.com>"]

[dependencies]
x11 = { version = "2.15.0", features = ["xlib", "xrandr"] }
# x11 = { path = "x11-rs/x11", features = ["xinerama", "xlib"]
libc = "0.2.30"
xcb = { version = "0.8.1", features = ["xlib_xcb", "randr"] }
xcb-util = { version = "0.2.0", features = ["keysyms", "image", "shm"] }

# TODO: This is a heavy dep, useful for debugging, avoid if possible.
image = "0.15.0"

[patch.crates-io]
xcb = { path = "rust-xcb" }
xcb-util = { path = "xcb-util" }

# enigo = "0.0.10"
# captrs = "0.2.2"
# image = { path = "../../oss/PistonDevelopers/image" }
# bit-vec = "0.4.4"
# freetype-rs = "0.14.0"
# log = "0.3.8"

# fontconfig = { path = "fontconfig-rs" }
# fontconfig-sys = { path = "fontconfig-rs/fontconfig-sys" }

# arrayfire = "3.5.0"
# freetype = "0.3.0"

# servo-fontconfig = "0.4.0"
# libc = "0.2.30"
# fxhash = "0.2.1"

# See https://lifthrasiir.github.io/rustlog/why-is-a-rust-executable-large.html
#
# To strip: RUSTFLAGS='-C link-args=-s' cargo build --release
[profile.release]
lto = true
panic = 'abort'